# ris

./: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
.github/workflows/: ci.yml
configs/: manager_config.yaml  manager_vars.yaml  static_config.yaml  worker_config.yaml  worker_vars_0.yaml  worker_vars_1.yaml  worker_vars_2.yaml
src/: hello.cpp  main.cpp
src/dto/: jeneral.yaml  manager.yaml  worker.yaml
src/manager/: ManagerHandlers.cpp  ManagerHandlers.h  ManagerState.cpp  ManagerState.h  ManagerTask.h  WorkerState.cpp  WorkerState.h  main.cpp
src/task/: Md5PartSolver.cpp  Md5PartSolver.h  TaskResult.h
src/tests/: md5_task.cpp
src/utils/: HandlerUtils.h
src/worker/: BackgroundTaskProcessor.cpp  BackgroundTaskProcessor.h  WorkerHandlers.cpp  WorkerHandlers.h  main.cpp
